# DataHive

./: README.md
.github/workflows/: deploy.yml
backend/: .gitignore  Makefile  PRD.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3f52e436e3c0_added_the_training_task_table.py  caef24f22773_added_new_fields_to_campaigns_and_.py
backend/app/: main.py
backend/app/ai_verification/: __init__.py  agent_crewai.py  agent_langgraph.py  akave.py  lilypad.py  llm.py  routes.py  services.py
backend/app/campaigns/: models.py  routes.py  schemas.py  services.py
backend/app/celery/: celery.py
backend/app/core/: constants.py
backend/app/training/: routes.py  schemas.py  services.py
datahive-contract/: active_campaigns_2025-04-10T22-10-00.017Z.json  cli.txt  hardhat.config.ts  package.json
datahive-contract/contracts/: CampaignManager.sol  ContributionManager.sol  DataHiveToken.sol  EscrowManager.sol  Reputation.sol  Verifier.sol
datahive-contract/scripts/: createCampaign.ts  createCampaignWithToken.ts  getActiveCampaigns.ts  getBadgeProgression.ts  getCampaignContributions.ts  getCampaignDetails.ts  getReputationLeaderboard.ts  getUserReputation.ts  mintTokens.ts  setupContracts.ts  submitContribution.ts  submitContributionSimple.ts  t_deployAndCreateCampaign.ts  t_deployDataHiveToken.ts
datahive-frontend/: README.md  package-lock.json  package.json
datahive-frontend/abi/: CampaignManager.json  ContributionManager.json  DataHiveToken.json  EscrowManager.json  Reputation.json
datahive-frontend/container/: Login.tsx
(+57 files in other folders)
