[project]
name = "datahive-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "mannyuncharted",email = "omoebun52@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "scalar-fastapi (>=1.0.3,<2.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openai (>=1.71.0,<2.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "langchain-openai (>=0.3.12,<0.4.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "redis (>=5.2.1,<6.0.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "crewai (>=0.108.0,<0.109.0)",
    "langgraph (>=0.3.25,<0.4.0)"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
